# FlameJump-Game-Jam

./: .gitignore  CMakeLists.txt  README.md  cmake.sh  web.sh
.cache/clangd/index/: main.cpp.E47A9016B9EF63DF.idx  raylib.h.802BF6AB06E1B456.idx  raymath.h.467C1CE77652066D.idx
assets/: box.mtl  car2.mtl  fireguy.mtl  woodplatform.mtl
assets/music/: reverie-midi.ceol  turning-page.ceol  turning-page.m4a
assets/sprites/: card_template.aseprite
src/: main.cpp
src/level/: level_generator.cpp  level_generator.h  platform.cpp  platform.h
src/physics/: physics.cpp  physics.h
src/player/: player.cpp  player.h  player_animations.cpp
web_build/: index.js  index.wasm
